Minor tweaks to CSS and HTML

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -9,6 +9,8 @@
         {%  if current_value is not none %}
             {{ current_value }}
         {%  endif %}</p>
+
+    <div class="button">
     <p>
     <button name="num" type="submit" value="1">1</button>
     <button name="num" type="submit" value="2">2</button>
@@ -34,6 +36,7 @@
     <button name="num" type="submit" value="=">=</button>
     <button name="num" type="submit" value="/">/</button>
     </p>
+    </div>
 
 </form>
 
