--- a/static/style.css
+++ b/static/style.css
@@ -30,3 +30,14 @@ body, html {
         flex-direction: column;
     }
 }
+
+.button {
+  background-color: darkcyan;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
