added necessary features to htmls

--- a/templates/calc.html
+++ b/templates/calc.html
@@ -35,6 +35,12 @@
     <button name="num" type="submit" value="/">/</button>
     </p>
 
+    <p>
+    <button name="num" type="submit" value='^0.5'>Sqr. Root</button>
+    <button name="num" type="submit" value='^'>Power</button>
+    </p>
+
+
 </form>
 
 
