--- a/templates/wordstats.html
+++ b/templates/wordstats.html
@@ -10,5 +10,8 @@
 
     {% if average_length is not none %}
         <p>Average word length: {{ average_length }}</p>
+        <p>Total word: {{ total_words }}</p>
+        <p>Total characters: {{ total_chars }}</p>
+        <p>Total vowels: {{ total_vowels }}</p>
     {% endif %}
 {% endblock %}
